--- a/index.hbs
+++ b/index.hbs
@@ -18,12 +18,13 @@
     <h1 class="blog-title">{{@blog.title}}</h1>
     <h2 class="blog-description">{{@blog.description}}</h2>
     <div class="custom-links">
-        <a href="https://twitter.com/MarkReadM" target="_blank"><i class="fa fa-twitter"></i></a>&nbsp;&nbsp;
-        <a href="https://plus.google.com/113570202169808481097/posts" target="_blank"><i class="fa fa-google-plus"></i></a>&nbsp;&nbsp;
-        <a href="https://www.pinterest.com/markreadM/" target="_blank"><i class="fa fa-pinterest"></i></a>&nbsp;&nbsp;·&nbsp;&nbsp;
-        <a href="/aboutme/">Über mich</a>&nbsp;&nbsp;·&nbsp;&nbsp;
-        <a href="/veroffentlichungen/">Veröffentlichungen</a>&nbsp;&nbsp;·&nbsp;&nbsp;
-        <a href="/alles-ausser-sprachkritik/">Sprachkritik</a>
+        <a href="https://twitter.com/nemofficial" target="_blank"><i class="fa fa-twitter"></i></a>&nbsp;&nbsp;
+        <a href="https://www.facebook.com/ourNEM" target="_blank"><i class="fa fa-facebook"></i></a>&nbsp;&nbsp;
+        <a href="https://www.reddit.com/r/nem" target="_blank"><i class="fa fa-reddit"></i></a>
+        <!--&nbsp;&nbsp;·&nbsp;&nbsp;-->
+        <!--<a href="/aboutme/">Über mich</a>&nbsp;&nbsp;·&nbsp;&nbsp;-->
+        <!--<a href="/veroffentlichungen/">Veröffentlichungen</a>&nbsp;&nbsp;·&nbsp;&nbsp;-->
+        <!--<a href="/alles-ausser-sprachkritik/">Sprachkritik</a>-->
     </div>
 </header>
 
@@ -105,6 +106,5 @@
     <a class="subscribe icon-feed" href="{{@blog.url}}/rss/"><span class="tooltip"> Subscribe!</span></a>
     <div class="inner">
          <section class="copyright">All content copyright <a href="{{@blog.url}}/">{{@blog.title}}</a> &copy; {{date format="YYYY"}} &bull; All rights reserved.</section>
-         <section class="poweredby">Proudly published with <a class="icon-ghost" href="http://ghost.org"> Ghost</a></section>
     </div>
 </footer>
