--- a/post.hbs
+++ b/post.hbs
@@ -138,11 +138,11 @@
                 </div>
                 {{/post}}
                 <div class="isRight">
-                    <h5 class="index-headline featured"><span>Name this section</span></h5>
+                    <!--<h5 class="index-headline featured"><span>Name this section</span></h5>-->
                     <footer class="site-footer">
                         <a class="subscribe icon-feed" href="{{@blog.url}}/rss/"><span class="tooltip"> Subscribe!</span></a>
                         <div class="inner">
-                             <section class="copyright">All content copyright <a href="{{@blog.url}}/">{{@blog.title}}</a> &copy; {{date format="YYYY"}} &bull; All rights reserved.</section>
+                             <section class="copyright">All content copyright <a href="{{@blog.url}}/">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>
                         </div>
                     </footer>
                 </div>
