--- a/post.hbs
+++ b/post.hbs
@@ -138,7 +138,7 @@
                 </div>
                 {{/post}}
                 <div class="isRight">
-                    <!--<h5 class="index-headline featured"><span>Name this section</span></h5>-->
+                    <h5 class="index-headline featured"><span></span></h5>
                     <footer class="site-footer">
                         <a class="subscribe icon-feed" href="{{@blog.url}}/rss/"><span class="tooltip"> Subscribe!</span></a>
                         <div class="inner">
