--- a/post.hbs
+++ b/post.hbs
@@ -147,7 +147,7 @@
                     </footer>
                 </div>
             </div>
-            {{> comment-list}}
+            <!--{{> comment-list}}-->
     </article>
 
 </main>
