--- a/default.hbs
+++ b/default.hbs
@@ -28,6 +28,7 @@
     <meta property="og:title" content="{{meta_title}}">
     <meta property="og:description" content="{{meta_description}}">
 
+    <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
     <link rel="stylesheet" href="{{asset "js/styles/obsidian.css"}}">
     <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Linux+Libertine:400,400i,700,700i/Open+Sans:400,400i,700,700i">
