--- a/default.hbs
+++ b/default.hbs
@@ -30,7 +30,7 @@
 
     <link href="/Favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link rel="stylesheet" href="{{asset "js/styles/obsidian.css"}}">
-    <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Linux+Libertine:400,400i,700,700i/Open+Sans:400,400i,700,700i">
+    <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Linux+Libertine:400,400i,700,700i/Roboto:400,400i,700,700i">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     {{! Styles'n'Scripts }}
     <link rel="stylesheet" type="text/css" media="screen" href="{{asset "css/main.css"}}" />
