--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -62,11 +62,11 @@ body
 
 .logo-readium
 	position: fixed
-	left: 10px
-	top: 10px
+	left: 30px
+	top: 30px
 	width: $rs*3
 	height: $rs*3
-	background-color: #fff
+	background-color: #fff !important
 	overflow: hidden
 	z-index: 99
 	.logo
