--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -6,7 +6,7 @@
 $rs: 16px
 
 $font-serif: Linux Libertine
-$font-sans: Roboto, MundoSans, "Helvetica Neue", Arial, Helvetica, sans-serif
+$font-sans: Open Sans, MundoSans, "Helvetica Neue", Arial, Helvetica, sans-serif
 
 @include font-face(icons, '../fonts/icons', normal, normal)
 
@@ -62,11 +62,11 @@ body
 
 .logo-readium
 	position: fixed
-	left: 30px
-	top: 30px
+	left: 50px
+	top: 50px
 	width: $rs*3
 	height: $rs*3
-	background-color: #fff !important
+	background-color: transparent
 	overflow: hidden
 	z-index: 99
 	.logo
