--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -72,8 +72,8 @@ body
 	.logo
 		display: block
 		position: absolute
-		top: $rs/2
-		left: $rs/2
+		top: 0
+		left: 0
 		width: $rs*2
 		height: $rs*2
 		background-image: url('/assets/img/readium-logo.png')
