--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -43,7 +43,7 @@
   content: "\e004"; }
 
 body {
-  font-family: Open Sans, MundoSans, "Helvetica Neue", Arial, Helvetica, sans-serif;
+  font-family: Roboto, MundoSans, "Helvetica Neue", Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
   text-rendering: optimizeLegibility;
@@ -60,7 +60,7 @@ body {
   top: 10px;
   width: 48px;
   height: 48px;
-  background-color: black;
+  background-color: white;
   overflow: hidden;
   z-index: 99; }
   .logo-readium .logo {
