--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -60,7 +60,7 @@ body {
   top: 10px;
   width: 48px;
   height: 48px;
-  background-color: white;
+  background-color: transparent !important;
   overflow: hidden;
   z-index: 99; }
   .logo-readium .logo {
