--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -5,8 +5,8 @@
 
 $rs: 16px
 
-$font-serif: Linux Libertine
-$font-sans: Open Sans, MundoSans, "Helvetica Neue", Arial, Helvetica, sans-serif
+$font-serif: Roboto
+$font-sans: Roboto, MundoSans, "Helvetica Neue", Arial, Helvetica, sans-serif
 
 @include font-face(icons, '../fonts/icons', normal, normal)
 
