--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -373,19 +373,27 @@ body
 			letter-spacing: -0.02em
 			font-weight: 700
 			font-style: normal
-			font-size: 24px
+			font-size: 30px
 			line-height: 1.3
 			margin: 0
 			font-family: $font-sans
 			margin-bottom: 4px
+		h4
+			font-size: 26px
+		h5
+			font-size: 22px
+		h6
+			font-size: 18px
 		h2, h1
 			letter-spacing: -0.02em
 			font-weight: 700
 			font-style: normal
-			font-size: 32px
+			font-size: 36px
 			line-height: 1.2
 			padding-top: 31px
 			margin-bottom: 4px
+		h1
+			font-size: 42px
 		p
 			font-weight: 400
 			font-style: normal
