--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -651,6 +651,6 @@ body {
   margin-top: 50px; }
 .post-tag-articleimage {
   display: none; }
-span.green{
-  color: #41bf76;
+.green{
+  color: #41bf76 !important;
 }
