--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -77,7 +77,7 @@ body {
   }
       @media only screen and (max-width: 800px) {
         .logo-readium .logo {
-        position: fixed; 
+        position: static; 
       }
       }
 
