--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -63,7 +63,11 @@ body {
   background-color: transparent !important;
   overflow: hidden;
   z-index: 99; }
-
+      @media only screen and (max-width: 800px) {
+        .logo-readium {
+        position: absolute !important; 
+      }
+      }
   .logo-readium .logo {
     display: block;
     position: absolute;
@@ -77,7 +81,7 @@ body {
   }
       @media only screen and (max-width: 800px) {
         .logo-readium .logo {
-        position: static !important; 
+        position: absolute !important; 
       }
       }
 
