--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -668,12 +668,8 @@ body {
 .green a{
   color: #41bf76 !important;
 }
-		h3, h4, h5, h6{
-			letter-spacing: -0.02em;
-			font-weight: 700;
-			font-style: normal;
+		h3{
 			font-size: 30px;
-			line-height: 1.3;
 		}
 		h4{
 			font-size: 26px;
@@ -684,14 +680,9 @@ body {
 		h6{
 			font-size: 18px;
 		}
-		h2, h1{
-			letter-spacing: -0.02em;
-			font-weight: 700;
-			font-style: normal;
+		h2{
 			font-size: 36px;
-			line-height: 1.2;
-			padding-top: 31px;
-			margin-bottom: 4px;
+		}
 		h1{
 			font-size: 42px;
 		}
