--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -669,20 +669,20 @@ body {
   color: #41bf76 !important;
 }
 		h3{
-			font-size: 30px;
+			font-size: 30px !important;
 		}
 		h4{
-			font-size: 26px;
+			font-size: 26px !important;
 		}
 		h5{
-			font-size: 22px;
+			font-size: 22px !important;
 		}
 		h6{
-			font-size: 18px;
+			font-size: 18px !important;
 		}
 		h2{
-			font-size: 36px;
+			font-size: 36px !important;
 		}
 		h1{
-			font-size: 42px;
+			font-size: 42px !important;
 		}
