--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -671,6 +671,9 @@ body {
 .post-template .post-content a{
 	color: #41bf76 !important;
 }
+.post-template .post-content a:hover{
+	color: rgba(65,191,118,0.6) !important;
+}
 .post-template .post-content a:visited{
 	color: rgba(65,191,118,0.6) !important;
 }
