--- a/default.hbs
+++ b/default.hbs
@@ -74,6 +74,7 @@
 		var chrome="<a href=\"http://www.google.com/chrome/\">Chrome</a>";
 		var cancel = "<i class=\"icon-cancel-circled\" onclick=\"parentNode.remove()\"></i>";
 		document.getElementById("headerIE").innerHTML=txt+chrome+or+firefox+cancel;
+		else
     </script>
     <script>
         
