--- a/default.hbs
+++ b/default.hbs
@@ -74,7 +74,7 @@
 		var chrome="<a href=\"http://www.google.com/chrome/\">Chrome</a>";
 		var cancel = "<i class=\"icon-cancel-circled\" onclick=\"parentNode.remove()\"></i>";
 		$("headerIE").html(txt+chrome+or+firefox+cancel);
-		if (GetIEVersion() == 0)
+		if (GetIEVersion() = 0)
 		$('#headerIE').html('');
     </script>
     <script>
