--- a/default.hbs
+++ b/default.hbs
@@ -55,7 +55,27 @@
     <script src="{{asset "js/highlight.pack.js"}}"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     <script>
-
+                function GetIEVersion() {
+	var sAgent = window.navigator.userAgent;
+	var Idx = sAgent.indexOf("MSIE");
+	// If IE, return version number.
+		if (Idx > 0)
+			return parseInt(sAgent.substring(Idx+ 5, sAgent.indexOf(".", Idx)));
+		// If IE 11 then look for Updated user agent string.
+		else if (!!navigator.userAgent.match(/Trident\/7\./))
+			return 11;
+		else
+			return 0; //It is not IE
+		}
+		if (GetIEVersion() > 0)
+		var txt="It looks like you are using Internet Explorer, for the best experience, you should view this site in ";
+		var or=" or ";
+		var firefox="<a href=\"https://www.mozilla.org/en-US/firefox/new/\">Firefox</a>";
+		var chrome="<a href=\"http://www.google.com/chrome/\">Chrome</a>";
+		var cancel = "<i class=\"icon-cancel-circled\" onclick=\"parentNode.remove()\"></i>";
+		document.getElementById("headerIE").innerHTML=txt+chrome+or+firefox+cancel;
+		if (GetIEVersion() == 0)
+		document.getElementById("headerIE").innerHTML='';
     </script>
     <script>
         
