--- a/default.hbs
+++ b/default.hbs
@@ -35,6 +35,8 @@
     {{! Styles'n'Scripts }}
     <link rel="stylesheet" type="text/css" media="screen" href="{{asset "css/main.css"}}" />
     <link rel="stylesheet" type="text/css" media="print" href="{{asset "css/print.css"}}" />
+    <link rel="stylesheet" type="text/css" href="//cdn.muut.com/latest/moot.css">
+    <script src="//cdn.muut.com/1/moot.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
