--- a/page.hbs
+++ b/page.hbs
@@ -149,7 +149,9 @@
             </div>
 
     </article>
-
+<section class="post-comment">
+    <a class="muut" title="Comments on {{{title}}}" href="https://muut.com/i/errright/blogchatter:{{{id}}}">Comments</a>
+</section>
 </main>
 
 <div class="bottom-closer">
