--- a/post.hbs
+++ b/post.hbs
@@ -149,6 +149,9 @@
                 </div>
             </div>
             <!--{{> comment-list}}-->
+            <section class="post-comment">
+    <a class="muut" title="Comments on {{{title}}}" href="https://muut.com/i/errright/blogchatter:{{{id}}}">Comments</a>
+</section>
     </article>
 
 </main>
