--- a/post.hbs
+++ b/post.hbs
@@ -150,7 +150,7 @@
             </div>
             <!--{{> comment-list}}-->
             <section class="post-comment">
-    <a class="muut" title="Comments on {{{title}}}" href="https://muut.com/i/neweconomy:{{{id}}}">Comments</a>
+    <a class="muut" title="Comments on {{{title}}}" href="https://muut.com/neweconomy:{{{id}}}">Comments</a>
 </section>
     </article>
 
