--- a/post.hbs
+++ b/post.hbs
@@ -150,7 +150,8 @@
             </div>
             <!--{{> comment-list}}-->
             <section class="post-comment">
-    <a class="muut" title="Comments on {{{title}}}" href="https://muut.com/i/saulgray:{{{id}}}">Comments</a>
+    <a class="muut" href="https://muut.com/i/nemblog">nemblog forum</a>
+
 </section>
     </article>
 
