--- a/post.hbs
+++ b/post.hbs
@@ -150,7 +150,7 @@
             </div>
             <!--{{> comment-list}}-->
             <section class="post-comment">
-    <a class="muut" href="https://muut.com/i/nemblog">nemblog forum</a>
+    <a class="muut" href="https://muut.com/i/nemblog/blogchat:{{{id}}}">nemblog forum</a>
 
 </section>
     </article>
