--- a/post.hbs
+++ b/post.hbs
@@ -151,7 +151,7 @@
             <!--{{> comment-list}}-->
             <section class="post-comment">
     <a class="muut" href="https://muut.com/i/nemblog/general:{{{id}}}">nemblog forum</a>
-
+<script src='//cdn.muut.com/1/moot.min.js'/>
 </section>
     </article>
 
