--- a/post.hbs
+++ b/post.hbs
@@ -150,7 +150,7 @@
             </div>
             <!--{{> comment-list}}-->
             <section class="post-comment">
-    <a class="muut" type="dynamic" href="https://muut.com/i/nemblog/comments:{{{title}}}">nemblog forum</a>
+    <a class="muut" title="Comments on {{{title}}}" type="dynamic" href="https://muut.com/i/nemblog/comments:{{{title}}}">nemblog forum</a>
 <script src='//cdn.muut.com/1/moot.min.js'/>
 </section>
     </article>
