--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,14 +1,14 @@
-.cf:after {
+@charset "UTF-8";
+.cf::after {
+  clear: both;
   content: "";
-  display: table;
-  clear: both; }
+  display: table; }
 
 @font-face {
   font-family: icons;
-  font-weight: normal;
   font-style: normal;
-  src: url("../fonts/icons.eot");
-  src: url("../fonts/icons.eot?#iefix") format("embedded-opentype"), url("../fonts/icons.woff") format("woff"), url("../fonts/icons.ttf") format("truetype"), url("../fonts/icons.svg#icons") format("svg"); }
+  font-weight: normal;
+  src: url("../fonts/icons.eot?#iefix") format("embedded-opentype"), url("../fonts/icons.woff2") format("woff2"), url("../fonts/icons.woff") format("woff"), url("../fonts/icons.ttf") format("truetype"), url("../fonts/icons.svg#icons") format("svg"); }
 /* Apply these base styles to all icons */
 .icon-ghost:before,
 .icon-feed:before,
@@ -27,20 +27,20 @@
 
 /* Each icon is created by inserting the corret character into the content of the :before pseudo element. Like a boss. */
 .icon-ghost:before {
-  content: "\e000"; }
+  content: ""; }
 
 .icon-feed:before {
-  content: "\e001"; }
+  content: ""; }
 
 .icon-twitter:before {
-  content: "\e002";
+  content: "";
   font-size: 1.1em; }
 
 .icon-google-plus:before {
-  content: "\e003"; }
+  content: ""; }
 
 .icon-facebook:before {
-  content: "\e004"; }
+  content: ""; }
 
 body {
   font-family: Roboto, MundoSans, "Helvetica Neue", Arial, Helvetica, sans-serif;
@@ -56,40 +56,29 @@ body {
 
 .logo-readium {
   position: fixed;
-  left: 12px;
-  top: 12px;
-  width: 64px;
-  height: 64px;
-  background-color: transparent !important;
+  left: 50px;
+  top: 50px;
+  width: 48px;
+  height: 48px;
+  background-color: transparent;
   overflow: hidden;
   z-index: 99; }
-      @media only screen and (max-width: 800px) {
-        .logo-readium {
-        position: absolute !important; 
-      }
-      }
   .logo-readium .logo {
     display: block;
     position: absolute;
-    top: 8px;
-    left: 8px;
+    top: 0;
+    left: 0;
     width: 32px;
     height: 32px;
     background-image: url("/assets/img/readium-logo.png");
     background-size: cover;
-    background-repeat: no-repeat; 
-  }
-      @media only screen and (max-width: 800px) {
-        .logo-readium .logo {
-        position: absolute !important; 
-      }
-      }
+    background-repeat: no-repeat; }
 
 .teaserimage {
   height: 450px;
   position: relative;
   overflow: hidden;
-  background-color: black; }
+  background-color: #000; }
   .teaserimage .teaserimage-image {
     background-size: cover;
     background-position: center;
@@ -124,8 +113,8 @@ body {
     border-radius: 50%;
     z-index: 99;
     text-indent: -9999px;
-    border: 3px solid white;
-    background-color: white;
+    border: 3px solid #fff;
+    background-color: #fff;
     -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
     -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3); }
@@ -139,24 +128,24 @@ body {
     outline: 0;
     line-height: 50px;
     word-break: break-word;
-    color: #333333; }
+    color: #333; }
   .blog-header .blog-description {
     margin: 0 0 20px;
     padding: 0 32px;
     font-size: 18px;
     line-height: 1.5;
-    color: #666666;
+    color: #666;
     text-align: center;
     font-weight: 400; }
   .blog-header .custom-links {
     margin: 0 0 50px;
     text-align: center;
-    color: #cccccc; }
+    color: #ccc; }
     .blog-header .custom-links a {
       text-decoration: none;
-      color: #999999; }
+      color: #999; }
       .blog-header .custom-links a:hover {
-        color: #333333; }
+        color: #333; }
 
 .content {
   width: 100%;
@@ -227,10 +216,10 @@ body {
   padding: 48px 0 0;
   font-size: 12px; }
   .pagination a {
-    color: #999999;
+    color: #999;
     text-decoration: none; }
     .pagination a:hover {
-      color: #333333; }
+      color: #333; }
 
 .post-reading {
   position: absolute;
@@ -258,17 +247,17 @@ body {
   max-width: 640px;
   font-size: 12px;
   text-align: center;
-  color: #999999;
+  color: #999;
   line-height: 17.6px; }
   .site-footer a {
-    color: #666666;
+    color: #666;
     text-decoration: none; }
     .site-footer a:hover {
-      color: #333333; }
+      color: #333; }
 
 .post .article-image {
   position: absolute;
-  background-color: black;
+  background-color: #000;
   top: 0;
   left: 0;
   right: 0;
@@ -304,7 +293,7 @@ body {
     letter-spacing: -0.04em;
     font-size: 50px;
     line-height: 1.1;
-    color: white;
+    color: #fff;
     margin-bottom: 16px;
     text-shadow: 0px 1px 16px rgba(0, 0, 0, 0.5), 0px 0px 1px rgba(0, 0, 0, 0.5); }
   .post .article-image .author-image {
@@ -340,7 +329,7 @@ body {
     margin: 64px auto 0;
     color: rgba(255, 255, 255, 0.75); }
     .post .article-image .fa-angle-down:hover {
-      color: white; }
+      color: #fff; }
   .post .article-image .topofpage {
     text-decoration: underline; }
 .post .noarticleimage .post-meta {
@@ -380,26 +369,34 @@ body {
 .post .post-content {
   width: 100%;
   font-family: Roboto;
-  color: #333333; }
+  color: #333; }
   .post .post-content h1, .post .post-content h2, .post .post-content h3 {
     font-family: Roboto, MundoSans, "Helvetica Neue", Arial, Helvetica, sans-serif; }
   .post .post-content h3, .post .post-content h4, .post .post-content h5, .post .post-content h6 {
     letter-spacing: -0.02em;
     font-weight: 700;
     font-style: normal;
-    font-size: 24px;
+    font-size: 30px;
     line-height: 1.3;
     margin: 0;
     font-family: Roboto, MundoSans, "Helvetica Neue", Arial, Helvetica, sans-serif;
     margin-bottom: 4px; }
+  .post .post-content h4 {
+    font-size: 26px; }
+  .post .post-content h5 {
+    font-size: 22px; }
+  .post .post-content h6 {
+    font-size: 18px; }
   .post .post-content h2, .post .post-content h1 {
     letter-spacing: -0.02em;
     font-weight: 700;
     font-style: normal;
-    font-size: 32px;
+    font-size: 36px;
     line-height: 1.2;
     padding-top: 31px;
     margin-bottom: 4px; }
+  .post .post-content h1 {
+    font-size: 42px; }
   .post .post-content p {
     font-weight: 400;
     font-style: normal;
@@ -407,12 +404,12 @@ body {
     line-height: 30px;
     margin: 0;
     padding-bottom: 30px;
-    color: #333333;
+    color: #333;
     -webkit-hyphens: auto;
     -moz-hyphens: auto;
     hyphens: auto; }
   .post .post-content a {
-    color: #333333;
+    color: #333;
     text-decoration: underline; }
   .post .post-content img {
     max-width: 100%;
@@ -430,9 +427,9 @@ body {
     z-index: 300;
     text-align: center; }
   .post .post-content code {
-    background-color: #333333;
-    color: white;
-    border-color: #333333;
+    background-color: #333;
+    color: #fff;
+    border-color: #333;
     font-family: Inconsolata, monospace, sans-serif;
     border-radius: 8px;
     padding: 2px 4px 4px;
@@ -443,13 +440,13 @@ body {
     -moz-hyphens: none;
     hyphens: none; }
   .post .post-content pre > code {
-    background-color: #333333;
-    border-color: #333333;
+    background-color: #333;
+    border-color: #333;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    padding: 1.33rem 1.7689rem;
-    color: white;
+    padding: 1 2;
+    color: #fff;
     line-height: 1.4;
     width: 100%;
     display: block;
@@ -472,8 +469,8 @@ body {
     display: block;
     width: 15%;
     margin: 30px auto;
-    border: 0px solid #dddddd;
-    border-top: 1px solid #dddddd; }
+    border: 0px solid #ddd;
+    border-top: 1px solid #ddd; }
   .post .post-content blockquote {
     margin: 0 0 30px;
     border: none; }
@@ -498,7 +495,7 @@ body {
       margin-bottom: 12px;
       padding-top: 2px; }
       .post .post-content ul li p, .post .post-content ol li p {
-        padding: 0 0 1.618rem; }
+        padding: 0 0 1rem; }
   .post .post-content ol li {
     list-style-type: decimal; }
 .post .bottom-teaser {
@@ -510,8 +507,8 @@ body {
     display: block;
     width: 15%;
     margin: 16px 0 16px 100px;
-    border: 0px solid #dddddd;
-    border-top: 1px solid #dddddd; }
+    border: 0px solid #ddd;
+    border-top: 1px solid #ddd; }
   .post .bottom-teaser .isLeft {
     float: left;
     width: 47%;
@@ -525,10 +522,10 @@ body {
     .post .bottom-teaser .isLeft .index-headline {
       padding-bottom: 32px; }
     .post .bottom-teaser .isLeft a {
-      color: black;
+      color: #000;
       text-decoration: none; }
       .post .bottom-teaser .isLeft a:hover {
-        color: #333333;
+        color: #333;
         text-decoration: underline; }
     .post .bottom-teaser .isLeft .author-image {
       display: block;
@@ -553,7 +550,7 @@ body {
       margin: 0;
       padding-left: 100px; }
       .post .bottom-teaser .isLeft p.published {
-        color: #999999; }
+        color: #999; }
   .post .bottom-teaser .isRight {
     float: right;
     width: 47%;
@@ -568,13 +565,13 @@ body {
     .post .bottom-teaser .isRight .site-footer {
       margin: 0;
       padding: 0;
-      color: #333333;
+      color: #333;
       text-align: left;
       font-size: 14px;
       line-height: 1.3;
-      color: #999999; }
+      color: #999; }
       .post .bottom-teaser .isRight .site-footer a {
-        color: #333333;
+        color: #333;
         text-decoration: none; }
         .post .bottom-teaser .isRight .site-footer a:hover {
           text-decoration: underline; }
@@ -582,19 +579,19 @@ body {
         display: block;
         padding-bottom: 18px;
         font-weight: 700;
-        color: #333333; }
+        color: #333; }
 
 .share {
   text-align: right;
   padding: 20px 0 0; }
   .share a {
     text-decoration: none;
-    color: #bbbbbb;
+    color: #bbb;
     padding-left: 12px; }
     .share a .hidden {
       display: none; }
     .share a:hover {
-      color: #333333; }
+      color: #333; }
 
 .bottom-closer {
   width: 100%;
@@ -628,14 +625,14 @@ body {
       outline: 0;
       line-height: 50px;
       word-break: break-word;
-      color: white;
+      color: #fff;
       text-shadow: 0px 1px 16px rgba(0, 0, 0, 0.5), 0px 0px 1px rgba(0, 0, 0, 0.5); }
     .bottom-closer .inner .blog-description {
       margin: 0 0 50px;
       padding: 0 32px;
       font-size: 18px;
       line-height: 1.5;
-      color: white;
+      color: #fff;
       text-align: center;
       font-weight: 400;
       text-shadow: 0px 1px 16px rgba(0, 0, 0, 0.5), 0px 0px 1px rgba(0, 0, 0, 0.5); }
@@ -652,49 +649,87 @@ body {
       cursor: pointer;
       height: 44px;
       background: #57ad68;
-      color: white;
+      color: #fff;
       vertical-align: middle;
       box-sizing: border-box;
       border-radius: 999em;
       line-height: 44px;
       padding: 0 18px; }
+
 #disqus_thread {
   margin-top: 50px; }
+
 .post-tag-articleimage {
-  display: none; }
-.green{
+  display: none;
+  color: green; }
+
+.green {
+  color: #41bf76 !important; }
+
+.green a {
+  color: #41bf76 !important; }
+
+.post-template .post-content a {
   color: #41bf76 !important;
-}
-.green a{
-  color: #41bf76 !important;
-}
-.post-template .post-content a{
-	color: #41bf76 !important;
-	text-decoration: none !important;
-}
-.post-template .post-content a:hover{
-	color: rgba(65,191,118,0.6) !important;
-}
-.post-template .post-content a:visited{
-	color: rgba(65,191,118,0.6) !important;
-}
-		h3{
-			font-size: 30px !important;
-		}
-		h4{
-			font-size: 26px !important;
-		}
-		h5{
-			font-size: 22px !important;
-		}
-		h6{
-			font-size: 18px !important;
-		}
-		h2{
-			font-size: 36px !important;
-		}
-		h1{
-			font-size: 42px !important;
-		}
-.alert { text-align: center; padding: 10px 10px; font-weight: 600; list-style-type: none; word-wrap: break-word; font-size: 14px; font-size: 0.875rem; -webkit-border-radius: 4px; -moz-border-radius: 4px; -ms-border-radius: 4px; -o-border-radius: 4px; border-radius: 4px; }
-.alert.warning { background: #fbdca0; border: 0px solid #f6b83f; color: #c68609; color: #644405; }
+  text-decoration: none !important; }
+
+.post-template .post-content a:hover {
+  color: rgba(65, 191, 118, 0.6) !important; }
+
+.post-template .post-content a:visited {
+  color: rgba(65, 191, 118, 0.6) !important; }
+
+h1 {
+  font-size: 42px !important; }
+
+h2 {
+  font-size: 36px !important; }
+
+h3 {
+  font-size: 30px !important; }
+
+h4 {
+  font-size: 26px !important; }
+
+h5 {
+  font-size: 22px !important; }
+
+h6 {
+  font-size: 18px !important; }
+
+.alert {
+  text-align: center;
+  padding: 10px 10px;
+  font-weight: 600;
+  list-style-type: none;
+  word-wrap: break-word;
+  font-size: 14px;
+  font-size: 0.875rem;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px; }
+
+.alert.warning {
+  background: #fbdca0;
+  border: 0px solid #f6b83f;
+  color: #c68609;
+  color: #644405; }
+
+/* make bootstrap dropdowns work on hover */
+.navbar-nav .dropdown:hover > .dropdown-menu {
+  display: block !important; }
+
+.navbar-nav .dropdown:hover > a[data-toggle=dropdown] + .dropdown-menu {
+  display: none !important; }
+
+.navbar-nav .dropdown.open > a[data-toggle=dropdown] + .dropdown-menu {
+  display: block !important; }
+
+.navbar {
+  margin-bottom: 0px;
+  background-color: transparent;
+  border: 0px solid white; }
+
+/*# sourceMappingURL=main.css.map */
