--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -1,4 +1,4 @@
-@import 'bourbon'
+@import 'bourbon/bourbon'
 
 .cf
 	@include clearfix
@@ -646,3 +646,69 @@ body
 	margin-top: 50px
 .post-tag-articleimage
 	display: none
+	color: green
+
+//*** NON-READIUM CUSTOM STYLES ***//
+
+.green
+	color: #41bf76 !important
+
+.green a
+	color: #41bf76 !important
+
+.post-template .post-content a
+	color: #41bf76 !important
+	text-decoration: none !important
+
+.post-template .post-content a:hover
+	color: rgba(65,191,118,0.6) !important
+
+.post-template .post-content a:visited
+	color: rgba(65,191,118,0.6) !important
+
+h1
+	font-size: 42px !important
+h2
+	font-size: 36px !important
+h3
+	font-size: 30px !important
+h4
+	font-size: 26px !important
+h5
+	font-size: 22px !important
+h6
+	font-size: 18px !important
+
+.alert
+	text-align: center
+	padding: 10px 10px
+	font-weight: 600
+	list-style-type: none
+	word-wrap: break-word
+	font-size: 14px
+	font-size: 0.875rem
+	-webkit-border-radius: 4px
+	-moz-border-radius: 4px
+	-ms-border-radius: 4px
+	-o-border-radius: 4px
+	border-radius: 4px
+
+.alert.warning
+	background: #fbdca0
+	border: 0px solid #f6b83f
+	color: #c68609
+	color: #644405
+//*** NON-READIUM CUSTOM STYLES ***//
+/* make bootstrap dropdowns work on hover */
+.navbar-nav .dropdown:hover > .dropdown-menu
+	display: block !important
+
+.navbar-nav .dropdown:hover > a[data-toggle=dropdown] + .dropdown-menu
+	display: none !important
+
+.navbar-nav .dropdown.open > a[data-toggle=dropdown] + .dropdown-menu
+	display: block !important
+.navbar
+	margin-bottom: 0px
+	background-color: transparent
+	border: 0px solid white
