--- a/default.hbs
+++ b/default.hbs
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <!-- (1) Optimize for mobile versions: http://goo.gl/EOpFl -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <!-- (1) force latest IE rendering engine: bit.ly/1c8EiC9 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -32,6 +32,8 @@
     <link rel="stylesheet" href="{{asset "js/styles/obsidian.css"}}">
     <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Linux+Libertine:400,400i,700,700i/Roboto:400,400i,700,700i">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+
     {{! Styles'n'Scripts }}
     <link rel="stylesheet" type="text/css" media="screen" href="{{asset "css/main.css"}}" />
     <link rel="stylesheet" type="text/css" media="print" href="{{asset "css/print.css"}}" />
@@ -41,7 +43,89 @@
     {{ghost_head}}
 </head>
 <body class="{{body_class}}">
-      <div class="warning alert" id ="headerIE"></div>
+    <div class="warning alert" id ="headerIE"></div>
+<!-- <nav gumby-fixed="250">
+   <div class="row navbar" id="nav1">
+      <a class="toggle" gumby-trigger="#nav1 > ul" href="#"><i class="icon-menu"></i></a>
+      <h1 class="three columns logo">
+         <a href="index.php">
+            <img src="assets/img/nemLogo.svg" alt="New Economy Movement" class="svg-inject" gumby-retina />
+         </a>
+      </h1>
+                  <ul class="nine columns">
+                     <li><a href="#"><span id="navclient">CLIENT</span></a></li>
+                     <li><a href="#"><span id="navbuy">BUY XEM</span></a></li>
+                     <li>
+                        <a id="support" href="#"><span>SUPPORT</span</a>
+                           <div class="dropdown">
+                           <ul>
+                              <li><a href="faq.html">FAQ</a></li>
+                              <li class=""><a href="http://blog.nem.io/nem-tutorial-list/">TUTORIAL</a></li>
+                              <li class=""><a href="http://support.ournem.com/">HELP DESK</a></li>
+                           </ul>
+                           </div>
+                     </li>
+                     <li class="skiplink"><a href="#"><span id="navupdate">UPDATES</span></a></li>
+      </ul>
+   </div>
+</nav> -->
+<div class="container">
+<div class="row">
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Brand</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+      <form class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+</div>
+</div>
     <a href="{{@blog.url}}" class="logo-readium"><span class="logo" style="background-image: url({{@blog.logo}})"></span></a>
     {{! Everything else gets inserted here }}
     {{{body}}}
@@ -54,6 +138,7 @@
     <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
     <script src="{{asset "js/readingTime.min.js"}}"></script>
     <script src="{{asset "js/highlight.pack.js"}}"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     <script>
                 function GetIEVersion() {
@@ -80,15 +165,15 @@
 		elem.parentNode.removeChild(elem);
     </script>
     <script>
-        
+
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    
-      ga('create', 'UA-60356672-2', 'nem.ghost.io'); 
+
+      ga('create', 'UA-60356672-2', 'nem.ghost.io');
       ga('send', 'pageview');
-    
+
     </script>
 
 </body>
