fixed container bug

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -191,7 +191,7 @@ body
 				text-decoration: none
 				&:hover
 					text-decoration: underline
-.container.featured
+.container-readium.featured
 	padding-bottom: 40px
 
 .post-template .content
@@ -783,3 +783,6 @@ h6
 		-webkit-transform: scaleX(1)
 		transform: scaleX(1)
 	// UNDERLINE NAVBAR HOVER STATE END ==========
+	/* had to rename a container in readium theme, it was conflicting with bootstrap */
+	// .container-readium.featured
+	// 	padding-bottom: 40px
