--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -192,7 +192,7 @@ body {
         .content article .post-meta a:hover {
           text-decoration: underline; }
 
-.container.featured {
+.container-readium.featured {
   padding-bottom: 40px; }
 
 .post-template .content {
@@ -759,30 +759,32 @@ h6 {
 @media screen and (min-width: 1200px) {
   .navbar-nav li {
     min-width: 140px; } }
-.navbar a > span {
-  position: relative;
-  color: #444;
-  text-decoration: none;
-  font-family: "Roboto", Arial, sans-serif; }
-.navbar a > span:hover, .navbar a > i:hover {
-  color: #41bf76 !important; }
-.navbar a > span:before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  margin-bottom: -15px;
-  background-color: #41bf76;
-  visibility: hidden;
-  -webkit-transform: scaleX(0);
-  transform: scaleX(0);
-  -webkit-transition: all 0.3s ease-in-out 0s;
-  transition: all 0.3s ease-in-out 0s; }
-.navbar a > span:hover:before {
-  visibility: visible;
-  -webkit-transform: scaleX(1);
-  transform: scaleX(1); }
+.navbar {
+  /* had to rename a container in readium theme, it was conflicting with bootstrap */ }
+  .navbar a > span {
+    position: relative;
+    color: #444;
+    text-decoration: none;
+    font-family: "Roboto", Arial, sans-serif; }
+  .navbar a > span:hover, .navbar a > i:hover {
+    color: #41bf76 !important; }
+  .navbar a > span:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    margin-bottom: -15px;
+    background-color: #41bf76;
+    visibility: hidden;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s; }
+  .navbar a > span:hover:before {
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1); }
 
 /*# sourceMappingURL=main.css.map */
