--- a/index.hbs
+++ b/index.hbs
@@ -56,7 +56,7 @@
 
     <h5 class="index-headline featured"><span>Featured</span></h5>
 
-    <div class="container featured">
+    <div class="container-readium featured">
         {{#foreach posts}}
             {{#if featured}}
                 <article class="{{post_class}}" itemscope itemtype="http://schema.org/BlogPosting" role="article">
