removed extra nem.io link

--- a/index.hbs
+++ b/index.hbs
@@ -21,8 +21,8 @@
         <a href="https://twitter.com/nemofficial" target="_blank"><i class="fa fa-twitter"></i></a>&nbsp;&nbsp;
         <a href="https://www.facebook.com/ourNEM" target="_blank"><i class="fa fa-facebook"></i></a>&nbsp;&nbsp;
         <a href="https://www.reddit.com/r/ournem" target="_blank"><i class="fa fa-reddit"></i></a>
-        &nbsp;&nbsp;·&nbsp;&nbsp;
-        <a href="http://nem.io/">nem.io</a>
+        <!-- &nbsp;&nbsp;·&nbsp;&nbsp;
+        <a href="http://nem.io/">nem.io</a> -->
         <!--<a href="/veroffentlichungen/">Veröffentlichungen</a>&nbsp;&nbsp;·&nbsp;&nbsp;-->
         <!--<a href="/alles-ausser-sprachkritik/">Sprachkritik</a>-->
     </div>
