replacing muut with discourse?

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -787,6 +787,8 @@ h6
 		-webkit-transform: scaleX(1)
 		transform: scaleX(1)
 	// UNDERLINE NAVBAR HOVER STATE END ==========
+#discourse-comments
+	min-height: 600px
 	/* had to rename a container in readium theme, it was conflicting with bootstrap */
 	// .container-readium.featured
 	// 	padding-bottom: 40px
