get the discourse iframe more height

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -790,7 +790,10 @@ h6 {
   transform: scaleX(1); }
 
 #discourse-comments {
-  min-height: 600px;
+  min-height: 600px; }
+
+#discourse-comments iframe {
+  height: 600px;
   /* had to rename a container in readium theme, it was conflicting with bootstrap */ }
 
 /*# sourceMappingURL=main.css.map */
