--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -789,6 +789,9 @@ h6
 	// UNDERLINE NAVBAR HOVER STATE END ==========
 #discourse-comments
 	min-height: 600px
+
+#discourse-comments iframe
+	height: 600px
 	/* had to rename a container in readium theme, it was conflicting with bootstrap */
 	// .container-readium.featured
 	// 	padding-bottom: 40px
