display correct comment height

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -791,7 +791,7 @@ h6
 	min-height: 600px
 
 #discourse-comments iframe
-	height: 100% !important
+	height: 600px !important
 	/* had to rename a container in readium theme, it was conflicting with bootstrap */
 	// .container-readium.featured
 	// 	padding-bottom: 40px
