troubleshooting discourse comment height

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -788,10 +788,11 @@ h6
 		transform: scaleX(1)
 	// UNDERLINE NAVBAR HOVER STATE END ==========
 #discourse-comments
-	min-height: 600px
+	min-height: 400px
 
 #discourse-comments iframe
-	height: 600px !important
+	height: 600px
+	height: 100% !important
 	/* had to rename a container in readium theme, it was conflicting with bootstrap */
 	// .container-readium.featured
 	// 	padding-bottom: 40px
