--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -790,10 +790,11 @@ h6 {
   transform: scaleX(1); }
 
 #discourse-comments {
-  min-height: 600px; }
+  min-height: 400px; }
 
 #discourse-comments iframe {
-  height: 600px !important;
+  height: 600px;
+  height: 100% !important;
   /* had to rename a container in readium theme, it was conflicting with bootstrap */ }
 
 /*# sourceMappingURL=main.css.map */
