--- a/default.hbs
+++ b/default.hbs
@@ -71,8 +71,9 @@
             <li><a href="http://blog.nem.io/nem-tutorial-list/">TUTORIALS</a></li>
           </ul>
         </li>
-        <li><a href="http://nem.io/#news"><span>UPDATES</span></a></li>
+        <li><a href="http://nemflash.com/"><span>UPDATES</span></a></li>
         <li><a href="http://blog.nem.io/"><span>BLOG</span></a></li>
+        <li><a href="http://wiki.nem.io/index.php/Main_Page"><span>WIKI</span></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
