--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -778,7 +778,7 @@ h6 {
   bottom: 0;
   left: 0;
   margin-bottom: -15px;
-  background-color: #41bf76;
+  background-color: #5ab3e8;
   visibility: hidden;
   -webkit-transform: scaleX(0);
   transform: scaleX(0);
